BACKEND EXPOSED TO ALL ORIGINS AND ADDED BAT FILE TO FIND IP AND CHANGE IN DRIVE APP ENV AND DONE

--- a/admin-dashboard/.env
+++ b/admin-dashboard/.env
@@ -1,2 +1,21 @@
-# Admin Dashboard Configuration
+# ============================================
+#  ADMIN DASHBOARD API CONFIGURATION
+# ============================================
+# 
+# Backend API URL
+# Default: http://localhost:5000/api (for local development)
+# 
+# If you need to access backend from a different machine:
+# 1. Find your computer's IP using GET_IP.bat or GET_IP.ps1
+# 2. Update the URL below:
+#    VITE_API_URL=http://YOUR_IP:5000/api
+# 
+# EXAMPLES:
+# Local:       http://localhost:5000/api
+# Network:     http://192.168.0.155:5000/api
+# Production:  https://api.yourcompany.com/api
+#
 VITE_API_URL=http://localhost:5000/api
+#
+# After changing, restart the admin dashboard (npm run dev)
+# ============================================
