--- a/driver-cash-app/.env
+++ b/driver-cash-app/.env
@@ -1,4 +1,22 @@
-# API Configuration
-# Change this IP to match your computer's IP address on the same network as your phone
-# To find your IP: Open Command Prompt and run 'ipconfig' - look for IPv4 Address
-EXPO_PUBLIC_API_URL=http://192.168.0.155:5000/api
+# ============================================
+#  DRIVER APP API CONFIGURATION
+# ============================================
+# 
+# This is the ONLY file you need to update when your IP changes!
+# 
+# HOW TO FIND YOUR IP:
+# 1. Double-click "GET_IP.bat" in the root folder
+#    OR
+# 2. Open Command Prompt and run: ipconfig
+# 3. Look for "IPv4 Address" (e.g., 192.168.0.155)
+# 
+# THEN UPDATE THIS LINE with your IP:
+EXPO_PUBLIC_API_URL=http://192.168.29.143:5000/api
+#
+# EXAMPLES:
+# Home WiFi:   http://192.168.1.100:5000/api
+# Office WiFi: http://10.0.0.50:5000/api
+# Hotspot:     http://192.168.43.1:5000/api
+#
+# After changing, restart the driver app (npm start)
+# ============================================
